add new patient data
